# alt-shift-kbd-layout-switcher

./: CMakeLists.txt  README.md  gnome-alt-shift-kbd-layout-switcher.desktop  gnome-alt-shift-kbd-layout-switcher.spec  main.c
gnome/: CMakeLists.txt  main.c
gnome/debian/: changelog  control
kde/: CMakeLists.txt  kde-alt-shift-kbd-layout-switcher.desktop  main.c
kde/debian/: changelog  control
